# exex-indexer

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.yaml
.github/workflows/: build.yml
src/: config.rs  db.rs  db_writer.rs  events.rs  indexer.rs  main.rs  rbuilder_types.rs  relay.rs  table_definitions.rs  utils.rs
src/datasets/: contracts.rs  erc20_metadata.rs  erc20_transfers.rs  headers.rs  logs.rs  mod.rs  native_transfers.rs  traces.rs  transactions.rs  uni_v2_pools.rs  uni_v2_pools_volume_and_tvl.rs  uni_v3_pools.rs  uni_v3_pools_volume_and_tvl.rs  uni_v4_pools.rs
