[package]
name = "exex-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.0" }

alloy-rlp = { version = "0.3.8", features = ["derive"] }
alloy-primitives = { version = "0.8.8", features = ["serde"] }
alloy-rpc-types = "0.5.4"
alloy-rpc-types-beacon = { version = "0.5.4", features = ["ssz"] }
alloy-rpc-types-trace = { version = "0.4.2", default-features = false }

chrono = "0.4.38"
eyre = "0.6.12"
flate2 = "1.0.34"
futures = "0.3.31"
futures-util = "0.3"
governor = "0.7.0"
primitive-types = { version = "0.13.1", features = ["serde"] }
rand = "0.8.5"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
serde_yaml = "0.9"
serde_with = "3.11.0"
thiserror = "1.0.64"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tracing = "0.1.40"
url = "2.5.2"
async-trait = "0.1.83"
lazy_static = "1.5.0"