[package]
name = "exex-indexer"
version = "0.3.0"
edition = "2021"

[dependencies]
# Reth deps (should be hardcoded)
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["full", "cli"] }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = ["alloy-compat"] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

# Alloy deps (should be hardcoded to same alloy version used in Reth)
alloy = { version = "1.0.23", features = ["sol-types"] }
alloy-consensus = "1.0.23"
alloy-eips = "1.0.23"
alloy-rpc-types = "1.0.23"
alloy-rpc-types-beacon = { version = "1.0.23", features = ["ssz"] }
alloy-rpc-types-eth = "1.0.23"
alloy-rpc-types-trace = { version = "1.0.23", default-features = false }
alloy-network = "1.0.23"

# Other deps can use latest version available
async-trait = ">=0.1.88"
chrono = ">=0.4.40"
eyre = ">=0.6.12"
futures = ">=0.3.31"
lazy_static = ">=1.5.0"
primitive-types = { version = ">=0.13.1", features = ["serde"] }
serde = { version = ">=1.0.219", features = ["derive"] }
serde_json = ">=1.0.140"
serde_yaml = ">=0.9"
tokio = { version = ">=1.44.1", features = ["full"] }
tokio-postgres = { version = ">=0.7.13", features = ["with-chrono-0_4"] }
tracing = ">=0.1.41"
hickory-resolver = { version = ">=0.25.0-alpha.5", package = "hickory-resolver" }
time = { version = ">=0.3.39", package = "time" }
